<resources>
    <!-- PersonalData Labels -->
    <string name="app_name">Labs20211-Gr03</string>
    <string name="informacion_personal">Información Personal</string>
    <string name="nombres">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="sexo">Sexo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="siguiente_btn">Siguiente</string>
    <string name="cambiar">Cambiar</string>
    <string name="todo">TODO</string>
    <string name="escolaridad">Grado de escolaridad</string>
    <string-array name="array_gradoEscolaridad">
        <item>Grado de escolaridad</item>
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universitaria</item>
        <item>Otro</item>
    </string-array>

    <!-- ContactData Labels -->
    <string name="informacion_contacto">Información de Contacto</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="pais">Pais</string>
    <string name="region">Region</string>
    <string name="ciudad">Ciudad</string>
    <string name="seleccione">Seleccione</string>
    <string name="direccion">Direccion</string>
    <string name="enviar_btn">Enviar</string>
    <string name="mensaje_enviar">Gracias por participar</string>

    <!-- Otros -->
    <string name="no_encontrado">No encontrado</string>
    <string name="requerido">* Requerido</string>
    <string name="msj_error_telefono">Escriba telefono valido</string>
    <string name="msj_error_email">Escriba correo valido</string>
    <string name="msj_error_pais">Seleccione un pais</string>
    <string name="msj_error_nombre">Escriba nombre valido</string>
    <string name="msj_error_apellido">Escriba apellidos validos</string>
</resources>